TEST_PROGRAMS/VALID/05/infinite_loop.go
/* Infinite loop. */

package main

func loop() {
	for {
		break
	}
}

func main() {
	loop()
}
