TEST_PROGRAMS/INVALID/05/no_package.go
/* No package declaration. */

// Error: package missing on top
// package main

func main() {

}
